2007-02-01  Kai Blin  <kai.blin@gmail.com>
	* plugins/info.py, dom.py: output information about faces.
	* plugins/sear.py: fix a typo
	* collada_plugin/generator.py: Remove pretty-printing for prims, as it produced
	  misleading output.

2007-01-31  Kai Blin  <kai.blin@gmail.com>
	* plugins/info.py, collada_plugin/parser.py, dom.py: Output more
	  information.
	* plugins/sear.py: Add stubbed exporter for SearObjects.
	* collada_plugin/generator.py: Fix missing tags.

2007-01-30  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <convex_mesh>, <tri(angles|fans|strips)> and <extra> tags,
	  pretty-print <float_arrays> and <triangles>

2007-01-29  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Clean up
	  some code to make parser/generator more readable and avoid duplication

2007-01-29  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <technique_common>, <accessor> and <param> tags.

2007-01-26  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <polygon>, <polylist>, <ph> and <vcount> tags.

2007-01-25  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <linestrips> tag and fix up the <lines> tag generation

2007-01-25  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <vertices>, <input>, <lines> and <p> tags.

2007-01-25  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <source> and <(IDREF|Name|bool|float|int)_array> tags.

2007-01-25  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <library_geometries>, <geometry> and <mesh> tags.
